heap updated